made the card to be in the center

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
   </style>
 </head>
 
-<body>
+<body> 
   <section>
     <div class="card">
       <img src="assets/images/illustration-article.svg" alt="illustration-article" width="100%">
    <div class="btn">Learning</div>
-   <p style="font-size: smaller;">Published 21 Dec 2023</p>
+   <p style="font-size: smallerk;">Published 21 Dec 2023</p>
 <div class="hover"  >HTML & CSS foundations</div>
 <p style="color: grey; font-size: smaller; ">These languages are the backbone of every website, defining structure, content, and presentation.</p>
    <footer>
@@ -38,10 +38,10 @@
   </section>
 
 
-  <div class="attribution" style="margin-top: 100px;">
+  <!-- <div class="attribution" >
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://oyedeleoreofe.netlify.app/">Kingrexicon</a>.
-  </div>
+  </div> -->
 </body>
 
 </html>
